// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button default snapshot 1`] = `
<DocumentFragment>
  <button
    class="button typePrimary"
    data-testid="button-undefined"
    type="button"
  >
    <span
      class=""
    >
      Click me
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button loading button 1`] = `
<DocumentFragment>
  <button
    class="button typePrimary"
    data-testid="button-loading"
    disabled=""
    type="button"
  >
    <svg
      class="svg spinner"
      viewBox="0 0 150 150"
      x="0px"
      y="0px"
    >
      <circle
        class="circle"
        cx="75"
        cy="75"
        r="60"
      />
    </svg>
    <span
      class="labelWithPrefixIcon"
    >
      Click me
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button prefix icon button 1`] = `
<DocumentFragment>
  <button
    class="button typePrimary"
    data-testid="button-undefined"
    type="button"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
      />
    </svg>
    <span
      class="labelWithPrefixIcon"
    >
      Click me
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button secondary button 1`] = `
<DocumentFragment>
  <button
    class="button typeSecondary"
    data-testid="button-undefined"
    type="button"
  >
    <span
      class=""
    >
      Click me
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button suffix icon button 1`] = `
<DocumentFragment>
  <button
    class="button typePrimary"
    data-testid="button-undefined"
    type="button"
  >
    <span
      class="labelWithSuffixIcon"
    >
      Click me
    </span>
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
      />
    </svg>
  </button>
</DocumentFragment>
`;
